--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -10,7 +10,7 @@
 <div class="container-fluid">
     <div class='table-card-header'>
         <div class="header-bar">
-            <span><i class="fa fa-bar-chart"></i> Graphs</span>
+            <span><i class="fa fa-bar-chart"></i> 图表</span>
         </div>
         <div class="button-bar">
             <div class="btn-group" id="user-selection">
@@ -21,21 +21,21 @@
             </div>
             <div class="btn-group" style="margin-right: 2px;" data-toggle="buttons" id="yaxis-selection">
                 <label class="btn btn-dark btn-filter">
-                    <input type="radio" name="yaxis-options" id="yaxis-plays" value="plays" autocomplete="off"> Play Count
+                    <input type="radio" name="yaxis-options" id="yaxis-plays" value="plays" autocomplete="off"> 播放次数
                 </label>
                 <label class="btn btn-dark btn-filter">
-                    <input type="radio" name="yaxis-options" id="yaxis-duration" value="duration" autocomplete="off"> Play Duration
+                    <input type="radio" name="yaxis-options" id="yaxis-duration" value="duration" autocomplete="off"> 播放时长
                 </label>
             </div>
             <div class="input-group pull-right" style="width: 1px;" id="days-selection">
                 <span class="input-group-addon btn-dark inactive">Last</span>
                 <input type="number" class="form-control number-input" name="graph-days" id="graph-days" value="30" min="1" data-default="7" data-toggle="tooltip" title="Min: 1 day" />
-                <span class="input-group-addon btn-dark inactive">days</span>
+                <span class="input-group-addon btn-dark inactive">天数</span>
             </div>
             <div class="input-group pull-right" style="width: 1px;" id="months-selection">
                 <span class="input-group-addon btn-dark inactive">Last</span>
                 <input type="number" class="form-control number-input" name="graph-months" id="graph-months" value="12" min="1" data-default="12" data-toggle="tooltip" title="Min: 1 month" />
-                <span class="input-group-addon btn-dark inactive">months</span>
+                <span class="input-group-addon btn-dark inactive">月份</span>
 			</div>
         </div>
     </div>
