--- a/data/interfaces/default/newsletters_table.html
+++ b/data/interfaces/default/newsletters_table.html
@@ -49,7 +49,7 @@ DOCUMENTATION :: END
     % endfor
     <li class="add-newsletter-agent pointer" id="add-newsletter-agent" data-target="#add-newsletter-modal" data-toggle="modal">
         <span>
-            <span class="toggle-left"><i class="fa fa-lg fa-fw fa-newspaper-o"></i></span> Add a new newsletter agent
+            <span class="toggle-left"><i class="fa fa-lg fa-fw fa-newspaper-o"></i></span> 添加一个新的通讯代理
             <span class="toggle-right"><i class="fa fa-lg fa-fw fa-plus"></i></span>
         </span>
     </li>
